syntax = "proto3";

package billing.v1;

option go_package = "github.com/pocketzworld/lurus-switch/api/billing/v1;billingv1";

import "google/protobuf/timestamp.proto";

// BillingService manages user billing and quotas
service BillingService {
  // CheckBalance checks if user has sufficient balance
  rpc CheckBalance(CheckBalanceRequest) returns (CheckBalanceReply);

  // DeductBalance deducts balance from user account
  rpc DeductBalance(DeductBalanceRequest) returns (DeductBalanceReply);

  // GetQuota returns user quota information
  rpc GetQuota(GetQuotaRequest) returns (GetQuotaReply);

  // ReportUsage reports usage for billing
  rpc ReportUsage(ReportUsageRequest) returns (ReportUsageReply);

  // GetUser returns user information
  rpc GetUser(GetUserRequest) returns (GetUserReply);

  // UpdateQuota updates user quota
  rpc UpdateQuota(UpdateQuotaRequest) returns (UpdateQuotaReply);

  // GetTransactions returns user transaction history
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsReply);
}

// User represents a user
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string avatar_url = 4;
  string plan = 5;  // free, basic, pro, enterprise
  double quota_total = 6;
  double quota_used = 7;
  bool is_admin = 8;
  bool is_disabled = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// Quota represents user quota information
message Quota {
  string user_id = 1;
  double quota_total = 2;
  double quota_used = 3;
  double quota_remain = 4;
  double daily_limit = 5;
  double daily_used = 6;
  google.protobuf.Timestamp reset_at = 7;
  google.protobuf.Timestamp last_updated = 8;
}

// CheckBalanceRequest
message CheckBalanceRequest {
  string user_id = 1;
  double required_amount = 2;  // Estimated cost
}

// CheckBalanceReply
message CheckBalanceReply {
  bool sufficient = 1;
  double available = 2;
  double required = 3;
  string message = 4;
}

// DeductBalanceRequest
message DeductBalanceRequest {
  string user_id = 1;
  double amount = 2;
  string reason = 3;
  string trace_id = 4;  // For idempotency
  string platform = 5;
  string model = 6;
}

// DeductBalanceReply
message DeductBalanceReply {
  bool success = 1;
  double new_balance = 2;
  string transaction_id = 3;
}

// GetQuotaRequest
message GetQuotaRequest {
  string user_id = 1;
}

// GetQuotaReply
message GetQuotaReply {
  Quota quota = 1;
}

// ReportUsageRequest
message ReportUsageRequest {
  string user_id = 1;
  string trace_id = 2;
  string platform = 3;
  string model = 4;
  int32 input_tokens = 5;
  int32 output_tokens = 6;
  double total_cost = 7;
  google.protobuf.Timestamp timestamp = 8;
}

// ReportUsageReply
message ReportUsageReply {
  bool success = 1;
  Quota updated_quota = 2;
}

// GetUserRequest
message GetUserRequest {
  string user_id = 1;
}

// GetUserReply
message GetUserReply {
  User user = 1;
}

// UpdateQuotaRequest
message UpdateQuotaRequest {
  string user_id = 1;
  oneof operation {
    double set_total = 2;  // Set absolute total quota
    double add_quota = 3;  // Add to existing quota
    double set_daily_limit = 4;  // Set daily limit
  }
  string reason = 5;
  string operator_id = 6;  // Admin user ID
}

// UpdateQuotaReply
message UpdateQuotaReply {
  bool success = 1;
  Quota updated_quota = 2;
}

// Transaction represents a billing transaction
message Transaction {
  string id = 1;
  string user_id = 2;
  string type = 3;  // usage, recharge, refund, adjustment
  double amount = 4;
  double balance_before = 5;
  double balance_after = 6;
  string description = 7;
  string trace_id = 8;
  string platform = 9;
  string model = 10;
  google.protobuf.Timestamp created_at = 11;
}

// GetTransactionsRequest
message GetTransactionsRequest {
  string user_id = 1;
  string type = 2;  // Filter by type
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  int32 limit = 5;
  int32 offset = 6;
}

// GetTransactionsReply
message GetTransactionsReply {
  repeated Transaction transactions = 1;
  int64 total = 2;
}
