syntax = "proto3";

package kratos.api;

option go_package = "github.com/pocketzworld/lurus-switch/provider-service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Consul consul = 3;
  Observability observability = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_idle_conns = 3;
    int32 max_open_conns = 4;
    google.protobuf.Duration conn_max_lifetime = 5;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    int32 db = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Database database = 1;
  Redis redis = 2;
}

message Consul {
  string address = 1;
  string scheme = 2;
  string service_name = 3;
  bool health_check = 4;
}

message Observability {
  message Tracing {
    bool enabled = 1;
    string endpoint = 2;
    double sample_rate = 3;
  }
  message Metrics {
    bool enabled = 1;
    string path = 2;
  }
  Tracing tracing = 1;
  Metrics metrics = 2;
}
